--- a/app/views/orders/_orders.html.haml
+++ b/app/views/orders/_orders.html.haml
@@ -1,6 +1,6 @@
 = section(object, :orders)
 .list#orders
-  - orders = object.orders.paginate(:page => 1, :per_page => 20)
+  - orders = object.orders.order('updated_at desc').paginate(:page => 1, :per_page => 20)
   = render :partial => "orders/order", :collection => object.orders.paginate(:page => 1, :per_page => 20)
 
-= paginate( collection: leads, id: 'orders_pagination', params: { action: 'orders' } )
+= paginate( collection: orders, id: 'orders_pagination', params: { action: 'orders' } )
