finished orders and some cleanup

--- a/app/views/orders/_opportunity.html.haml
+++ b/app/views/orders/_opportunity.html.haml
@@ -1,5 +1,6 @@
 = fields_for(@opportunity) do |o|
   = o.hidden_field :user_id
+  = o.hidden_field :id
   -#= o.hidden_field :order_id
   -#= o.hidden_field :access
   -#= o.hidden_field :assigned_to
