--- a/app/views/home/_task.html.haml
+++ b/app/views/home/_task.html.haml
@@ -9,7 +9,7 @@
         = t(:task_from, link_to(h(task.user.full_name), user_path(task.user))).html_safe << ':'
       = link_to(task.name, tasks_path)
       - if task.asset_id?
-        == #{t :related} #{link_to(task.asset.name, polymorphic_url(task.asset))}
+        == #{t :related} #{link_to(task.asset.full_name(current_user.preference[:leads_naming]), polymorphic_url(task.asset))}
       &ndash;
     %tt
       - if task.bucket == "due_asap"
