--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -11,22 +11,13 @@
     #{t :no_task_records}
 
 .title
-  %span#title #{t :my_opportunities}
-%ul.list#opportunities
-  - unless @my_opportunities.empty?
-    = render :partial => "home/opportunity", :collection => @my_opportunities.limit(10)
-    = show_hidden_entities_message(@my_opportunities.count, 'opportunity', 10)
+  %span#title #{t :my_orders}
+%ul.list#orders
+  - unless @my_orders.empty?
+    = render :partial => "home/order", :collection => @my_orders.limit(10)
+    = show_hidden_entities_message(@my_orders.count, 'order', 10)
   - else
-    #{t :no_opportunity_records}
-
-.title
-  %span#title #{t :my_accounts}
-%ul.list#accounts
-  - unless @my_accounts.empty?
-    = render :partial => "home/account", :collection => @my_accounts.limit(10)
-    = show_hidden_entities_message(@my_accounts.count, 'account', 10)
-  - else
-    #{t :no_account_records}
+    #{t :no_order_records}
 
 .title_tools
   = link_to_inline(:options, url_for(:action => :options), :text => t(:options))
