--- a/app/views/orders/_edit.html.haml
+++ b/app/views/orders/_edit.html.haml
@@ -3,7 +3,8 @@
     = link_to_close edit_order_path(@order)
 
     = f.hidden_field :user_id
-    = render "lead"
+    -#= render "lead"
+    = render "account"
     .section
       %table
         %tr
@@ -15,7 +16,7 @@
           %td
             .label State of Incorporate
             = f.select :state_of_incorporate, @us_states , {:selected => (@order.state_of_incorporate || ""), :include_blank => true}, { :style => "width:160px" }
-    = render "account"
+
 
     = render "opportunity"
     -#= render "task"
