--- a/app/views/orders/_lead.html.haml
+++ b/app/views/orders/_lead.html.haml
@@ -38,3 +38,5 @@
         %td
           .label #{t :source}:
           = l.select :source, Setting.unroll(:lead_source), { :selected => (@lead.source || "other").to_sym }, { :style => "width:160px" }
+
+  -#= render "account_address", :f => l
