--- a/app/views/orders/_new.html.haml
+++ b/app/views/orders/_new.html.haml
@@ -2,7 +2,9 @@
   = link_to_close new_order_path
 
   = f.hidden_field :user_id
-  = render "lead"
+  = render "account"
+  -#= render "lead"
+
   .section
     %table
       %tr
@@ -14,7 +16,6 @@
         %td
           .label State of Incorporate
           = f.select :state_of_incorporate, @us_states , {:selected => (@order.state_of_incorporate || ""), :include_blank => true}, { :style => "width:160px" }
-  = render "account"
 
   = render "opportunity"
   = render "task"
