--- a/app/views/tasks/_related.html.haml
+++ b/app/views/tasks/_related.html.haml
@@ -10,7 +10,7 @@
       = link_to(related.user.full_name, user_path(related.user))
     = ": " + related.name
     - if related.asset_id?
-      == (#{t :related} #{link_to(related.asset.name, polymorphic_url(related.asset))})
+      == (#{t :related} #{link_to(related.asset.full_name(current_user.preference[:leads_naming]), polymorphic_url(related.asset))})
     &ndash;
     %tt
       - if related.completed_at
