--- a/app/views/tasks/_assigned.html.haml
+++ b/app/views/tasks/_assigned.html.haml
@@ -13,7 +13,7 @@
     = link_to(assigned.assignee.full_name, user_path(assigned.assignee)) + ": "
     = auto_link h(assigned.name)
     - if assigned.asset_id?
-      == #{t :related} #{link_to(h(assigned.asset.name), polymorphic_url(assigned.asset))}
+      == #{t :related} #{link_to(h(assigned.asset.full_name(current_user.preference[:leads_naming])), polymorphic_url(assigned.asset))}
     &ndash;
     %tt
       - if assigned.bucket == "due_asap"
