--- a/app/views/orders/_edit.html.haml
+++ b/app/views/orders/_edit.html.haml
@@ -14,7 +14,7 @@
 
           %td= spacer
           %td
-            .label State of Incorporate
+            .label.req State of Incorporate
             = f.select :state_of_incorporate, @us_states , {:selected => (@order.state_of_incorporate || ""), :include_blank => true}, { :style => "width:160px" }
 
 
