add file upload

--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -7,6 +7,7 @@
 //= require jquery
 //= require jquery-migrate
 //= require jquery_ujs
+//= require jquery.remotipart
 //= require jquery-ui
 //= require select2-full
 //= require crm
@@ -33,6 +34,7 @@
 //= require timeago
 //= require pagination
 //= require orders
+//= require cocoon
 //= require_self
 
 <%
