--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,6 +11,7 @@
     %style= yield :styles
 
     = javascript_include_tag :application
+    = javascript_include_tag :defaults
 
     - unless tabless_layout? || %w(en-US en-GB).include?(I18n.locale.to_s)
       = javascript_include_tag "jquery_ui_datepicker/jquery.ui.datepicker-#{I18n.locale}"
