--- a/app/views/orders/_edit.html.haml
+++ b/app/views/orders/_edit.html.haml
@@ -20,6 +20,18 @@
 
     = render "opportunity"
     -#= render "task"
+    %h3 Add Files
+    #atta
+      = f.fields_for :order_files do |of|
+        -#= render "order_file_fields", :f => of
+      .links
+        = link_to_add_association "add" , f, :order_files
+
+    %h4 Attached Files:
+    - if !@attachments.nil?
+      -@attachments.each do |a|
+        = link_to "#{a.file_name}", a.attachment.url, :target => "_blank"
+        %br
 
     .buttonbar
       = f.submit t(:save_order)
