--- a/app/views/orders/_new.html.haml
+++ b/app/views/orders/_new.html.haml
@@ -1,4 +1,4 @@
-= simple_form_for(@order, :html => one_submit_only,authenticity_token: true , :remote => true) do |f|
+= simple_form_for(@order, :html => one_submit_only,authenticity_token: true ,:multipart => true, :remote => true) do |f|
   = link_to_close new_order_path
 
   = f.hidden_field :user_id
@@ -20,7 +20,12 @@
 
   = render "opportunity"
   = render "task"
-  -#= render "attachments"
+  %h3 Add Files
+  #attachments
+    = f.fields_for :order_files do |of|
+      = render "order_file_fields", :f => of
+    .links
+      = link_to_add_association "add" , f, :order_files
 
   .buttonbar
     - if Setting.compound_address
