fix for upload file

--- a/app/views/orders/_edit.html.haml
+++ b/app/views/orders/_edit.html.haml
@@ -21,7 +21,7 @@
     = render "opportunity"
     -#= render "task"
     %h3 Add Files
-    #atta
+    #attachments
       = f.fields_for :order_files do |of|
         -#= render "order_file_fields", :f => of
       .links
