--- a/app/views/orders/_order_file_fields.html.haml
+++ b/app/views/orders/_order_file_fields.html.haml
@@ -8,4 +8,4 @@
       %td
         .label Upload File
         .action
-          = f.file_field :attachment
+          = f.file_field :attachment, :multipart => true
