--- a/app/views/orders/_opportunity.html.haml
+++ b/app/views/orders/_opportunity.html.haml
@@ -19,7 +19,7 @@
       %tr
         %td
           .label #{t :amount} #{t :currency}:
-          = o.text_field :amount, :style => "width:110px; text-align:right;"
+          = o.text_field :amount,:required => true, :style => "width:110px; text-align:right;"
         %td= spacer
         %td
           .label #{t :discount} #{t :currency}:
