--- a/app/views/comments/_new.html.haml
+++ b/app/views/comments/_new.html.haml
@@ -18,17 +18,17 @@
     = link_to_function(t(:expand_all), "crm.flip_notes_and_emails('#{t(:expanded)}', '#{t(:more)}', '#{t(:less)}', '#{id_prefix}')") << " | "
     = link_to_function(t(:collapse_all), "crm.flip_notes_and_emails('#{t(:collapsed)}', '#{t(:more)}', '#{t(:less)}', '#{id_prefix}')")
 
-  %div{ {:id => "#{id_prefix}_post"}.merge(hidden_if(true))}
+  %div{ {:id => "#{id_prefix}_post"}.merge(hidden_if(false))}
     = form_for(@comment, :remote => true, :html => {:id => "#{id_prefix}_new_comment"}) do |f|
       = hidden_field_tag "comment[commentable_id]", commentable.id, :id => "#{id_prefix}_comment_commentable_id"
       = hidden_field_tag "comment[commentable_type]", class_name.classify, :id => "#{id_prefix}_comment_commentable_type"
-      = f.text_area :comment, :id => "#{id_prefix}_comment_comment"
+      = f.text_area :comment, :id => "#{id_prefix}_comment_comment", placeholder: "Add new comment..."
       .buttons
         = image_tag("loading.gif", :size => :thumb, :class => "spinner", :style => "display: none;")
         = f.submit t(:add_note), :id => "#{id_prefix}_comment_submit"
         #{t :or}
         = link_to(t(:cancel), '#', :class => 'cancel')
-  %div{ {:id => "#{id_prefix}_ask"}.merge(hidden_if(false))}
+  %div{ {:id => "#{id_prefix}_ask"}.merge(hidden_if(true))}
     = text_field_tag :post_new_note, t(:add_note_help), :id => "#{id_prefix}_post_new_note"
 
   - if notification_emails_configured?
