--- a/app/views/accounts/_new.html.haml
+++ b/app/views/accounts/_new.html.haml
@@ -6,16 +6,21 @@
 
   = render "accounts/top_section",  :f => f
   = render "fields/edit_custom_field_group", :f => f
-  = render "shared/add_comment", :f => f
   = render "accounts/contact_info", :f => f
+  = render "shared/add_comment", :f => f
   = render "fields/groups",  :f => f
-  = render "entities/permissions",  :f => f, :entity => @account
+  -#= render "entities/permissions",  :f => f, :entity => @account
   = hook(:entity_form, self, {f: f, entity: @account})
 
   .buttonbar
     - if Setting.compound_address
       = f.submit t(:create_account), :onclick => "crm.clear_all_hints()"
+      #{t :or}
+      = f.submit "Save and Order"
     - else
       = f.submit t(:create_account)
+      #{t :or}
+      = f.submit "Save and Order"
     #{t :or}
     = link_to_cancel new_account_path
+
