--- a/app/views/accounts/show.html.haml
+++ b/app/views/accounts/show.html.haml
@@ -15,11 +15,11 @@
 
   = hook(:show_account_bottom, self, {entity: @account}) do
 
-    = render :partial => "tasks/tasks", :locals => {:object => @account}
+    -#= render :partial => "tasks/tasks", :locals => {:object => @account}
 
-    = render "contacts/contacts", :object => @account
+    -#= render "contacts/contacts", :object => @account
 
-    = render "opportunities/opportunities", :object => @account
+    -#= render "opportunities/opportunities", :object => @account
 
     = render "versions/versions", :object => @account
 
