--- a/app/views/orders/_edit.html.haml
+++ b/app/views/orders/_edit.html.haml
@@ -16,6 +16,10 @@
           %td
             .label.req State of Incorporate
             = f.select :state_of_incorporate, @us_states , {:selected => (@order.state_of_incorporate || ""), :include_blank => true}, { :style => "width:160px" }
+          %td= spacer
+          %td
+            .label.req Request Type
+            = f.select :request_type, Setting.unroll(:order_request_type), {:selected => (@order.request_type || ""), :include_blank => true}, {:required => true, :style => "width:160px" }
 
 
     = render "opportunity"
