--- a/app/views/orders/_lead.html.haml
+++ b/app/views/orders/_lead.html.haml
@@ -10,15 +10,15 @@
       %tr
         %td
           .label.top{ :class => "#{Setting.require_first_names ? 'req' : nil}" } #{t :first_name}:
-          = l.text_field :first_name, :autofocus => true
+          = l.text_field :first_name, :autofocus => true,:required => true
         %td= spacer
         %td
           .label.top{ :class => "#{Setting.require_last_names ? 'req' : nil}" } #{t :last_name}:
-          = l.text_field :last_name
+          = l.text_field :last_name,:required => true
       %tr
         %td
           .label.req #{t :email}:
-          = l.text_field :email
+          = l.text_field :email,:required => true
         %td= spacer
         %td
           .label #{t :phone}:
@@ -31,10 +31,6 @@
             = l.text_area :background_info, :style =>"width:500px", :rows => 3
     %table
       %tr
-        %td
-          .label.top #{t :blog}:
-          = l.text_field :blog
-        %td= spacer
         %td
           .label #{t :source}:
           = l.select :source, Setting.unroll(:lead_source), { :selected => (@lead.source || "other").to_sym }, { :style => "width:160px" }
