--- a/app/views/orders/_new.html.haml
+++ b/app/views/orders/_new.html.haml
@@ -1,6 +1,7 @@
 = simple_form_for(@order, :html => one_submit_only,authenticity_token: true ,:multipart => true, :remote => true) do |f|
   = link_to_close new_order_path
 
+  = hidden_field_tag :from_accounts, "false"
   = f.hidden_field :user_id
   = f.error_messages :object_name => t('order')
   = render "account"
@@ -17,9 +18,13 @@
         %td
           .label.req State of Incorporate
           = f.select :state_of_incorporate, @us_states , {:selected => (@order.state_of_incorporate || ""), :include_blank => true}, { :style => "width:160px" }
+        %td= spacer
+        %td
+          .label.req Request Type
+          = f.select :request_type, Setting.unroll(:order_request_type), {:selected => (@order.request_type || ""), :include_blank => true}, {:required => true, :style => "width:160px" }
 
   = render "opportunity"
-  = render "task"
+  -#= render "task"
   %h3 Add Files
   #attachments
     = f.fields_for :order_files do |of|
