--- a/app/views/orders/_opportunity.html.haml
+++ b/app/views/orders/_opportunity.html.haml
@@ -18,9 +18,12 @@
     %table
       %tr
         %td
-          .label #{t :amount} #{t :currency}:
+          .label.req #{t :amount} #{t :currency}:
           = o.text_field :amount,:required => true, :style => "width:110px; text-align:right;"
         %td= spacer
+        %td
+          .label #{t :other_amount} #{t :currency}:
+          = o.text_field :other_amount, :style => "width:110px; text-align:right;"
         %td
           .label #{t :discount} #{t :currency}:
           = o.text_field :discount, :style => "width:110px; text-align:right;"
