--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -28,6 +28,7 @@
 //= require jquery.disable
 //= require jquery_ui_datepicker/jquery-ui-timepicker-addon
 //= require admin/fields
+//= require admin/business_rules
 //= require format_buttons
 //= require crm_comments
 //= require jquery_timeago
