--- a/app/views/orders/_new.html.haml
+++ b/app/views/orders/_new.html.haml
@@ -17,11 +17,11 @@
         %td= spacer
         %td
           .label.req State of Incorporate
-          = f.select :state_of_incorporate, @us_states , {:selected => (@order.state_of_incorporate || ""), :include_blank => true}, { :style => "width:160px" }
+          = f.select :state_of_incorporate, @us_states , {:selected => (@order.state_of_incorporate || ""), :include_blank => true}, { class: "business_rule_filter",:style => "width:160px" }
         %td= spacer
         %td
           .label.req Request Type
-          = f.select :request_type, Setting.unroll(:order_request_type), {:selected => (@order.request_type || ""), :include_blank => true}, {:required => true, :style => "width:160px" }
+          = f.select :request_type, Setting.unroll(:order_request_type), {:selected => (@order.request_type || ""), :include_blank => true}, {:required => true,class: "business_rule_filter", :style => "width:160px" }
 
   = render "opportunity"
   -#= render "task"
