--- a/app/views/accounts/_edit.html.haml
+++ b/app/views/accounts/_edit.html.haml
@@ -15,7 +15,11 @@
     .buttonbar
       - if Setting.compound_address
         = f.submit t(:save_account), :onclick => "crm.clear_all_hints()"
+        #{t :or}
+        = f.submit "Save and Order"
       - else
         = f.submit t(:save_account)
+        #{t :or}
+        = f.submit "Save and Order"
       #{t :or}
       = link_to_cancel edit_account_path(@account)
