--- a/app/views/accounts/update.js.haml
+++ b/app/views/accounts/update.js.haml
@@ -11,6 +11,9 @@
     $('##{id}').replaceWith('#{ j render(:partial => entity_name, :collection => [ @entity ]) }');
     $('##{id}').effect("highlight", { duration:1500 });
     = refresh_sidebar(:index, :filters)
+    - if @create_order == true
+      $('##{dom_id(@entity)}').slideDown(50);
+      $('##{dom_id(@entity)}').html('#{ j render(:partial => "edit_account_order") }');
 - else
   $('##{id}').html('#{ j render(:partial => "edit") }');
   $('##{id}').effect("shake", { duration:250, distance: 6 });
