--- a/app/views/admin/business_rules/_index.html.haml
+++ b/app/views/admin/business_rules/_index.html.haml
@@ -1,3 +1,4 @@
+#edit_business_rule
 %table
   %tbody
     %tr
@@ -14,6 +15,8 @@
         %td
           = br.amount
         %td
-          
+          - if !br.business_rule_files.blank?
+            - br.business_rule_files.each do |brf|
+              = brf.file_name
         %td
           = link_to "Edit","#", :class => "rule", :id => br.id
