--- a/app/views/orders/_edit.html.haml
+++ b/app/views/orders/_edit.html.haml
@@ -30,8 +30,9 @@
         -#= render "order_file_fields", :f => of
       .links
         = link_to_add_association "add" , f, :order_files
-
+    #required_files
     %h4 Attached Files:
+
     - if !@attachments.nil?
       -@attachments.each do |a|
         .attached_file{:id => "attached_file_#{a.id}"}
