--- a/app/views/accounts/_edit_account_order.html.haml
+++ b/app/views/accounts/_edit_account_order.html.haml
@@ -25,13 +25,13 @@
           = f.select :request_type, Setting.unroll(:order_request_type), {:selected => (@order.request_type || ""), :include_blank => true}, {class: "business_rule_filter",:required => true, :style => "width:160px" }
 
   = render "orders/opportunity"
-  -#%h3 Add Files
+  %h3 Add Files
   -##attachments
   -#  = f.fields_for :order_files do |of|
   -#    = render "account_order_file_fields", :f => of
   -#  .links
   -#    = link_to_add_association "add" , f, :order_files
-  -##required_files
+  #required_files
   -#= render "task"
   -#%h3 Add Files
   -##attachments
