--- a/app/views/orders/create_order_from_account.js.haml
+++ b/app/views/orders/create_order_from_account.js.haml
@@ -3,3 +3,5 @@ $('#create_account').slideUp(250);
 $('#account_#{@account.id}').slideUp(250);
 
 $('#account_#{@account.id}').replaceWith('#{ j render(:partial => 'accounts/account', :collection => [ @account]) }');
+
+$("#edit_account").slideUp(250)
