--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -7,6 +7,7 @@
 //= require jquery
 //= require jquery-migrate
 //= require jquery_ujs
+//= require dataTables/jquery.dataTables
 //= require jquery.remotipart
 //= require jquery-ui
 //= require select2-full
