--- a/app/views/accounts/_contact_info.html.haml
+++ b/app/views/accounts/_contact_info.html.haml
@@ -27,7 +27,7 @@
           = f.text_field :website
         %td= spacer
         %td
-          .label.top Email:
+          .label.top.req Email:
           = f.text_field :email
       %tr
         %td
