--- a/app/views/orders/_edit.html.haml
+++ b/app/views/orders/_edit.html.haml
@@ -31,6 +31,7 @@
       .links
         = link_to_add_association "add" , f, :order_files
     #required_files
+    #web
     %h4 Attached Files:
 
     - if !@attachments.nil?
