--- a/app/views/orders/_index_brief.html.haml
+++ b/app/views/orders/_index_brief.html.haml
@@ -7,7 +7,7 @@
   %ul.tools
     - if can?(:update, order)
       %li= link_to_edit(order)
-      %li= link_to "Send Invoice", "#", id: "#{order.id}",class: "send_invoice" if !order.qb_invoice_sent?
+      %li= link_to "Send Invoice", "#", id: "#{order.id}",class: "send_invoice",data: {confirm: "Are you sure you want to send the invoice to #{order.account.name}"} if !order.qb_invoice_sent?
   .indent
     = link_to_if can?(:read, order), order.account.name, order
     %tt
