--- a/app/views/shared/_address.html.haml
+++ b/app/views/shared/_address.html.haml
@@ -25,7 +25,7 @@
                 = link_to_function(t(:same_as_billing), "crm.copy_compound_address('account_billing_address', 'account_shipping_address')")
               .label #{t title}:
           - else
-            .label #{t title}:
+            .label.req #{t title}:
           = address_field(a, address, :street1, "width:240px; margin-top:3px")
           = address_field(a, address, :street2, "width:240px;")
     %table.address(cellpadding="0" cellspacing="0")
