--- a/app/views/admin/users/_profile.html.haml
+++ b/app/views/admin/users/_profile.html.haml
@@ -18,12 +18,18 @@
         .label #{t :password_confirmation}:
         = f.password_field :password_confirmation
     %tr
-      %td(colspan=3)
+      %td
         .check_box(style="margin-top:6px")
           -# Sorry, you can't revoke Admin rights from yourself.
           = f.check_box(:admin, { :disabled => edit && @user == current_user })
           %label{:for => 'user_admin'}
             = t(:user_is_admin)
+      %td= spacer
+      %td
+        .check_box(style="margin-top:6px")
+          = f.check_box(:sales_manager, { :disabled => edit && @user == current_user })
+          %label{:for => 'user_sales_manager'}
+            = t(:user_is_sales_manager)
 
 .subtitle #{t :personal_information}
 .section
