--- a/app/views/contacts/_new.html.haml
+++ b/app/views/contacts/_new.html.haml
@@ -11,7 +11,7 @@
   = render "contacts/extra",       :f => f
   = render "contacts/web",         :f => f
   = render "fields/groups",        :f => f
-  = render "entities/permissions", :f => f, :entity => @contact
+  -#= render "entities/permissions", :f => f, :entity => @contact
   = hook(:entity_form, self, {f: f, entity: @contact})
 
   .buttonbar
