--- a/app/views/contacts/_top_section.html.haml
+++ b/app/views/contacts/_top_section.html.haml
@@ -30,9 +30,9 @@
               - # Add [-- None --] account choice when editing existing contact that has an account.
               - options[:include_blank] = "" unless @contact.new_record? || @contact.account.blank?
           %td= spacer
-          %td
-            .label #{t :assigned_to}:
-            = user_select(:contact, all_users, current_user)
+          -#%td
+          -#  .label #{t :assigned_to}:
+          -#  = user_select(:contact, all_users, current_user)
 
         - if Setting.background_info && Setting.background_info.include?(:contact)
           %tr
