--- a/app/views/orders/copy_account_details.js.haml
+++ b/app/views/orders/copy_account_details.js.haml
@@ -1,6 +1,8 @@
 
 -#$('#lead_email').text('#{j (@account.email)}')
 $('#lead_email').attr("value", '#{j (@account.email)}')
+$('#lead_first_name').attr("value", '#{j (@account.first_name)}')
+$('#lead_last_name').attr("value", '#{j (@account.last_name)}')
 $('#account_billing_address_attributes_street1').attr("value", '#{j (@address.street1)}')
 $('#account_billing_address_attributes_street2').attr("value", '#{j (@address.street2)}')
 $('#account_billing_address_attributes_city').attr("value", '#{j (@address.city)}')
