adding contact from account

--- a/app/views/accounts/show.html.haml
+++ b/app/views/accounts/show.html.haml
@@ -17,7 +17,7 @@
 
     -#= render :partial => "tasks/tasks", :locals => {:object => @account}
 
-    -#= render "contacts/contacts", :object => @account
+    = render "contacts/contacts", :object => @account
 
     -#= render "opportunities/opportunities", :object => @account
 
