--- a/app/views/admin/dropdown_options/index.html.haml
+++ b/app/views/admin/dropdown_options/index.html.haml
@@ -1,9 +1,9 @@
 .remote#create_referral_source{ hidden }
-%h3 Referral Sources
-#referral_source_table
+%h3(style="margin: 10px;" ) Referral Sources
+#referral_source_table(style="border: 1px solid black;width: 300px;")
   = render "referral_source"
 
 .remote#create_account_category{ hidden }
-%h3 Account Categories
-#account_category_table
+%h3(style="margin: 10px;" ) Account Categories
+#account_category_table(style="border: 1px solid black;width: 300px;")
   = render "admin/account_categories/index"
