--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -30,6 +30,8 @@
 //= require jquery_ui_datepicker/jquery-ui-timepicker-addon
 //= require admin/fields
 //= require admin/business_rules
+//= require admin/dropdown_options
+//= require admin/account_categories
 //= require format_buttons
 //= require crm_comments
 //= require jquery_timeago
