--- a/app/views/accounts/_account_order.html.haml
+++ b/app/views/accounts/_account_order.html.haml
@@ -29,7 +29,7 @@
       %tr
         %td
           .label.req #{t :assign_to}:
-          = f.select :assigned_to, @sales_managers, {:selected => (@order.assigned_to || "Unassigned")}, {:required => true, :style => "width:160px" }
+          = f.select :assigned_to, @sales_managers, {:selected => (@order.assigned_to || "Unassigned")}, { :style => "width:160px" }
   = render "orders/opportunity"
   -#%h3 Add Files
   -##attachments
