--- a/app/views/orders/_new.html.haml
+++ b/app/views/orders/_new.html.haml
@@ -27,7 +27,7 @@
       %tr
         %td
           .label.req #{t :assign_to}:
-          = f.select :assigned_to, @sales_managers, {:selected => (@order.assigned_to || "Unassigned")}, {:required => true, :style => "width:160px" }
+          = f.select :assigned_to, @sales_managers, {:selected => (@order.assigned_to || "Unassigned")}, { :style => "width:160px" }
   = render "opportunity"
   -#= render "task"
   %h3 Add Files
