--- a/app/views/admin/business_rules/_business_rule_file_fields.html.haml
+++ b/app/views/admin/business_rules/_business_rule_file_fields.html.haml
@@ -3,7 +3,7 @@
     %tr
       %td
         .label File Name
-        = f.text_field :file_name, :autofocus => true, :style => "width:140px;"
+        = f.text_field :file_name, :autofocus => true, :required=> true, :style => "width:140px;"
       %td= spacer
       %td
         .label Upload File
