--- a/app/views/orders/_order_file_fields.html.haml
+++ b/app/views/orders/_order_file_fields.html.haml
@@ -3,7 +3,10 @@
     %tr
       %td
         .label File Name
-        = f.text_field :file_name, :autofocus => true, :style => "width:140px;"
+        - if !@br_files.nil?
+          = f.select :file_name, @br_files, :style => "width:140px;"
+        - else
+          = f.text_field :file_name, :autofocus => true, :style => "width:140px;"
       %td= spacer
       %td
         .label Upload File
