--- a/app/views/orders/_edit.html.haml
+++ b/app/views/orders/_edit.html.haml
@@ -3,7 +3,9 @@
     = link_to_close edit_order_path(@order)
 
     = f.hidden_field :user_id
+    -#= f.error_messages :object_name => t('order')
     -#= render "lead"
+    #display_error(style="background-color: red;" )
     = render "account"
     .section
       %table
@@ -27,13 +29,15 @@
             .label.req #{t :assign_to}:
             = f.select :assigned_to, @sales_managers, {:selected => (@order.assigned_to || "Unassigned")}, { :style => "width:160px" }
     = render "opportunity"
+    = render "shared/add_comment", :f => f
+    #additional_field
     -#= render "task"
     %h3 Add Files
     #attachments
       = f.fields_for :order_files do |of|
         -#= render "order_file_fields", :f => of
       .links
-        = link_to_add_association "add" , f, :order_files
+        = link_to_add_association "Add File" , f, :order_files
     #required_files
       - if !@br_attachments.nil?
         %h4 Required Files:
@@ -53,7 +57,10 @@
           = link_to "#{a.file_name}", a.attachment.url,:id => "#{a.id}", :target => "_blank"
           = link_to "x", "#",:id => "#{a.id}",:class=> "remove_attachment"
           %br
-
+    - if !@order.additional_field.nil?
+      - eval(@order.additional_field).each do |k,v|
+        .label #{k}
+        = text_field_tag k , v
     .buttonbar
       = f.submit t(:save_order)
       #{t :or}
