--- a/app/views/orders/_new.html.haml
+++ b/app/views/orders/_new.html.haml
@@ -4,6 +4,7 @@
   = hidden_field_tag :from_accounts, "false"
   = f.hidden_field :user_id
   = f.error_messages :object_name => t('order')
+  #display_error(style="background-color: red;" )
   = render "account"
   -#= render "lead"
 
@@ -29,6 +30,10 @@
           .label.req #{t :assign_to}:
           = f.select :assigned_to, @sales_managers, {:selected => (@order.assigned_to || "Unassigned")}, { :style => "width:160px" }
   = render "opportunity"
+  = render "shared/add_comment", :f => f
+
+  #additional_field
+
   -#= render "task"
   %h3 Add Files
   #attachments
