--- a/app/views/orders/update.js.haml
+++ b/app/views/orders/update.js.haml
@@ -2,18 +2,25 @@
 - @entity = instance_variable_get("@#{entity_name}")
 - id = called_from_landing_page? ? "edit_#{entity_name}" : dom_id(@entity)
 
-- if @entity.errors.empty?
-  - if called_from_landing_page?
-    crm.flip_form('edit_#{entity_name}');
-    crm.set_title('edit_#{entity_name}', '#{h @entity.full_name}');
-    -#= refresh_sidebar(:show, :summary)
-  - else
-    $('##{id}').replaceWith('#{ j render(:partial => entity_name, :collection => [ @entity ]) }');
-    $('##{id}').effect("highlight", { duration:1500 });
-    - if called_from_index_page?
-      = refresh_sidebar(:index, :filters)
+- if @not_equal == "true"
+  console.log("not equal is true")
+  $('##{id}').html('#{ j render(:partial => "edit") }');
+  $('##{id}').effect("shake", { duration:250, distance: 6 });
+  $('#display_error').html("Please add all the required files.")
+- else
+  console.log("not equal is false")
+  - if @entity.errors.empty?
+    - if called_from_landing_page?
+      crm.flip_form('edit_#{entity_name}');
+      crm.set_title('edit_#{entity_name}', '#{h @entity.full_name}');
+      -#= refresh_sidebar(:show, :summary)
     - else
-      $('#recently').replaceWith('#{ j render(:partial => "shared/recently") }');
+      $('##{id}').replaceWith('#{ j render(:partial => entity_name, :collection => [ @entity ]) }');
+      $('##{id}').effect("highlight", { duration:1500 });
+      - if called_from_index_page?
+        = refresh_sidebar(:index, :filters)
+      - else
+        $('#recently').replaceWith('#{ j render(:partial => "shared/recently") }');
 
 
 = hook(:entity_update, self, {entity: @entity})
